--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.13.1</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>net.java.dev.jna</groupId>
@@ -65,6 +66,7 @@
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
                 <version>3.24.2</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.ow2.asm</groupId>
