--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.javakeyring</groupId>
     <artifactId>java-keyring-parent</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <packaging>pom</packaging>
     <name>java-keyring-parent</name>
     <description>A Java library to store password securely</description>
@@ -31,6 +31,7 @@
         <parameter.organization.email>rex@e-hoffman.org</parameter.organization.email>
         <parameter.organization.name>Java Keyring</parameter.organization.name>
         <parameter.owasp.failOnCVSSLevelOrGreater>11</parameter.owasp.failOnCVSSLevelOrGreater>
+        <version.nexus.staging.maven.plugin>1.6.8</version.nexus.staging.maven.plugin>
         <version.owasp.check.maven.plugin>8.2.1</version.owasp.check.maven.plugin>
     </properties>
     <dependencyManagement>
@@ -47,12 +48,6 @@
                 </exclusions>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.13.1</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna</artifactId>
                 <version>5.13.0</version>
@@ -61,12 +56,6 @@
                 <groupId>net.java.dev.jna</groupId>
                 <artifactId>jna-platform</artifactId>
                 <version>5.13.0</version>
-            </dependency>
-            <dependency>
-                <groupId>org.assertj</groupId>
-                <artifactId>assertj-core</artifactId>
-                <version>3.24.2</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.ow2.asm</groupId>
@@ -98,6 +87,18 @@
                 <groupId>com.github.advisedtesting</groupId>
                 <artifactId>AdviseStaticEvictingClassloader</artifactId>
                 <version>1.3.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13.1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.24.2</version>
                 <scope>test</scope>
             </dependency>
         </dependencies>
@@ -134,7 +135,7 @@
                     <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                 </configuration>
             </plugin>
-        </plugins>    
+        </plugins>
     </reporting>
     <inceptionYear>2019</inceptionYear>
     <organization>
