Enfore JDK17 (due to secret-service requiring JDK17)

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,11 @@
         <github.owner>javakeyring</github.owner>
         <github.project>java-keyring</github.project>
         <github.site.location>${project.version}/</github.site.location>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <!-- set the below parameter to false once you've cut your first release and you want semantic version checking -->
         <parameter.disable.semantic.versioning>true</parameter.disable.semantic.versioning>
-        <parameter.java.version>11</parameter.java.version>
+        <parameter.java.version>17</parameter.java.version>
         <parameter.license>BSD-3</parameter.license>
         <parameter.organization.email>rex@e-hoffman.org</parameter.organization.email>
         <parameter.organization.name>Java Keyring</parameter.organization.name>
