--- a/java-keyring/pom.xml
+++ b/java-keyring/pom.xml
@@ -20,6 +20,18 @@
         <parameter.jacoco.instruction.coverage>0.05</parameter.jacoco.instruction.coverage>
     </properties>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>de.swiesend</groupId>
