Try to update JaCoCo

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
                     <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.10</version>
+            </plugin>
         </plugins>
     </reporting>
     <inceptionYear>2019</inceptionYear>
