--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
         <parameter.organization.email>rex@e-hoffman.org</parameter.organization.email>
         <parameter.organization.name>Java Keyring</parameter.organization.name>
         <parameter.owasp.failOnCVSSLevelOrGreater>11</parameter.owasp.failOnCVSSLevelOrGreater>
-        <version.nexus.staging.maven.plugin>1.6.8</version.nexus.staging.maven.plugin>
+        <version.jacoco.maven.plugin>0.8.10</version.jacoco.maven.plugin>
+        <version.nexus.staging.maven.plugin>1.6.13</version.nexus.staging.maven.plugin>
         <version.owasp.check.maven.plugin>8.2.1</version.owasp.check.maven.plugin>
     </properties>
     <dependencyManagement>
@@ -39,7 +40,7 @@
             <dependency>
                 <groupId>de.swiesend</groupId>
                 <artifactId>secret-service</artifactId>
-                <version>1.0.0</version>
+                <version>1.8.1-jdk17</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
@@ -80,13 +81,13 @@
             <dependency>
                 <groupId>com.github.advisedtesting</groupId>
                 <artifactId>AdvisedJunit4</artifactId>
-                <version>1.3.2</version>
+                <version>1.3.3</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>com.github.advisedtesting</groupId>
                 <artifactId>AdviseStaticEvictingClassloader</artifactId>
-                <version>1.3.2</version>
+                <version>1.3.3</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
