--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <dependency>
                 <groupId>de.swiesend</groupId>
                 <artifactId>secret-service</artifactId>
-                <version>1.7.0</version>
+                <version>1.8.0-jdk17</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.slf4j</groupId>
