Update dbus-java-transport-native-unixsocket to 4.3.0

--- a/java-keyring/pom.xml
+++ b/java-keyring/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>secret-service</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.hypfvieh</groupId>
+            <artifactId>dbus-java-transport-native-unixsocket</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
         </dependency>
